# Twitch

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: config.rs  error.rs  main.rs
src/bot/: message.rs  mod.rs
src/commands/: mod.rs  simple.rs  spotify.rs
