[package]
name = "twitch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
futures-util = "0.3.31"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"
reqwest = { version = "0.12.23", features = ["json"] }
base64 = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
thiserror = "2.0.16"
async-trait = "0.1.89"